fix issues sonarqube controller